Fix menu page on mobile

--- a/src/sass/elements/_category.sass
+++ b/src/sass/elements/_category.sass
@@ -54,6 +54,7 @@
 @mixin categoriesMobileView()
   .b-categories
     flex-direction: column
+    align-items: initial
 
     .b-category
       min-height: 140px
